--- a/components/css/main.css
+++ b/components/css/main.css
@@ -1,6 +1,3 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 /* General colors */
 
@@ -73,3 +70,6 @@
     border: 1px solid rgba(23, 25, 32, 0.35);   
     color: rgba(0,0,0);
 }
+
+
+/* Modal Style */
